     widescreen resolutions are now marked as such
   * Added tooltips to the --new-widgets title screen
   * Added a place holder upload statistics button in the --new-widgets title
   * Fixed bug #15716: Lobby crash when refreshing with filtered out games
   * Fixed bug #15768: Avoid parts of the previous game show in the lobby
   * Fixed bug #15727: Allow wml message titles to wrap
     screen
 * WML Engine:
   * Deprecated [set_variable]'s random key, use rand instead
   * Renamed [unit][status] healable to unhealable so it can default to 'no'
   * Added 'side X turn refresh' and 'side X turn Y refresh' events
   * Add ~DARKEN() counterpart to ~BRIGHTEN()
   * Implement min_value for [illuminates]
   * Added lua functions wesnoth.get_side_count() and wesnoth.is_enemy(a,b)
   * Add 'recall_cost' key for [side], to override [game_config]'s default
 * Miscellaneous and bug fixes:
   * Defaulted log level to warning again
   * New option to auto-set delay shroud update on game start
   * better fix for bug 14765 now that string freeze is off
   * Added a way to rename local players at game creation
   * Fixed picking the proper locale, the problem only occurred on some
     systems
   * Added a way to compile wesnoth on windows by using CMake + MSVC9.
 * Terrain animation related
   * animated terrain animations are not synchronized anymore
   * reworked macros to handle animations
   * added new stone-wall-lit terrain
   * made all animated terrains use the new macro system
   * added a new "snowy castle" terrain
   * added new mausoleum scenery
   * added new "snowy fort"
   * added new "desert castle"

Version 1.8.0:
 * AI:
   * Fixed bug #14247: Make formula AI behave correctly if the side has only 1
     potential recruit.
   * Added support for candidate actions written in lua.
 * Campaigns:
   * Descent into Darkness:
     * Added new Giant Rat base frame and animations.
   * Legend of Wesmere:
     * Fixed bug #15631: Scenario 3: arrival of Kalenz failed